react/kiezradar: fix map z-index

--- a/meinberlin/assets/scss/components_user_facing/_kiezradar.scss
+++ b/meinberlin/assets/scss/components_user_facing/_kiezradar.scss
@@ -157,6 +157,8 @@
 
 .kiezradar__map {
   margin-bottom: 2.5rem;
+  position: relative;
+  z-index: 0;
 
   @media screen and (min-width: $breakpoint-tablet) {
     margin-bottom: 2rem;
